--- a/deskutils/Makefile
+++ b/deskutils/Makefile
@@ -26,6 +26,7 @@ SUBDIR += gnote
 SUBDIR += gnustep-notebook
 SUBDIR += gnustep-wrapper
 SUBDIR += go-for-it
+SUBDIR += grantleetheme
 SUBDIR += gtkjj
 SUBDIR += gucharmap
 SUBDIR += gworkspace
