--- a/devel/Makefile
+++ b/devel/Makefile
@@ -290,6 +290,7 @@ SUBDIR += kf6-kunitconversion
 SUBDIR += kf6-solid
 SUBDIR += kf6-threadweaver
 SUBDIR += kio-extras
+SUBDIR += ktextaddons
 SUBDIR += kyua
 SUBDIR += lcov
 SUBDIR += lemon
