--- a/x11/Makefile
+++ b/x11/Makefile
@@ -84,6 +84,7 @@ SUBDIR += libXxf86dga
 SUBDIR += libXxf86vm
 SUBDIR += libei
 SUBDIR += libexo
+SUBDIR += libfakekey
 SUBDIR += libfm
 SUBDIR += libfm-extra
 SUBDIR += libgnomekbd
