--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -106,6 +106,8 @@ SUBDIR += isc-cron
 SUBDIR += jailme
 SUBDIR += javaservicewrapper
 SUBDIR += k9s
+SUBDIR += kcron
+SUBDIR += kdeadmin
 SUBDIR += kdialog
 SUBDIR += kf5-baloo
 SUBDIR += kf5-kwallet
@@ -113,6 +115,7 @@ SUBDIR += kf6-baloo
 SUBDIR += kf6-kuserfeedback
 SUBDIR += kf6-kwallet
 SUBDIR += khelpcenter
+SUBDIR += ksystemlog
 SUBDIR += ldap-account-manager
 SUBDIR += less
 SUBDIR += libcdio
