add plasma audio

--- a/audio/Makefile
+++ b/audio/Makefile
@@ -156,6 +156,10 @@ SUBDIR += opus
 SUBDIR += opusfile
 SUBDIR += pavucontrol
 SUBDIR += pcaudiolib
+SUBDIR += plasma6-kpipewire
+SUBDIR += plasma6-ocean-sound-theme
+SUBDIR += plasma6-oxygen-sounds
+SUBDIR += plasma6-plasma-pa
 SUBDIR += portaudio
 SUBDIR += portmidi
 SUBDIR += pulseaudio
