--- a/net/Makefile
+++ b/net/Makefile
@@ -91,6 +91,8 @@ SUBDIR += kontactinterface
 SUBDIR += kpimtextedit
 SUBDIR += ksmtp
 SUBDIR += ktnef
+SUBDIR += mailcommon
+SUBDIR += mailimporter
 SUBDIR += realtek-re-kmod
 SUBDIR += rubygem-http_parser.rb
 SUBDIR += rubygem-serverengine
