sysutils/rocinante: ugh

--- a/sysutils/rocinante/Makefile
+++ b/sysutils/rocinante/Makefile
@@ -17,12 +17,12 @@ NO_BUILD=	yes
 NO_ARCH=	yes
 
 do-install:
-	${INSTALL_SCRIPT} ${WRKSRC}/${PREFIX}/bin/rocinante ${STAGEDIR}${PREFIX}/bin
+	${INSTALL_SCRIPT} ${WRKSRC}/${LOCALBASE}/bin/rocinante ${PREFIX}/bin
 
 post-install:
-	${MKDIR} ${STAGEDIR}${PREFIX}/etc
-	${MKDIR} ${STAGEDIR}${PREFIX}/libexec/${PORTNAME}
-	(cd ${WRKSRC}/${PREFIX}/libexec/${PORTNAME} && ${COPYTREE_SHARE} . ${STAGEDIR}${PREFIX}/libexec/${PORTNAME})
-	${INSTALL_DATA} ${WRKSRC}${PREFIX}/etc/rocinante.conf ${STAGEDIR}${PREFIX}/etc/rocinante.conf.sample
+	${MKDIR} ${PREFIX}/etc
+	${MKDIR} ${PREFIX}/libexec/${PORTNAME}
+	(cd ${WRKSRC}/${LOCALBASE}/libexec/${PORTNAME} && ${COPYTREE_SHARE} . ${STAGEDIR}${PREFIX}/libexec/${PORTNAME})
+	${INSTALL_DATA} ${WRKSRC}${LOCALBASE}/etc/rocinante.conf ${STAGEDIR}${PREFIX}/etc/rocinante.conf.sample
 
 .include <bsd.port.mk>
