--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1286,6 +1286,7 @@ SUBDIR += py-prance
 SUBDIR += py-prompt-toolkit
 SUBDIR += py-proselint
 SUBDIR += py-pure-eval
+SUBDIR += py-pyTooling
 SUBDIR += py-py-partiql-parser
 SUBDIR += py-pybind11
 SUBDIR += py-pydantic
