--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -279,6 +279,7 @@ SUBDIR += py-pygraphviz
 SUBDIR += py-png
 SUBDIR += py-pycha
 SUBDIR += py-pyqrcode
+SUBDIR += py-qt5-3d
 SUBDIR += qt5-3d
 SUBDIR += qt5-graphicaleffects
 SUBDIR += qt5-imageformats
