--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1512,8 +1512,7 @@ SUBDIR += qca
 SUBDIR += qcoro
 SUBDIR += qgit
 SUBDIR += qjson
-SUBDIR += qscintilla2-qt5
-SUBDIR += qscintilla2-qt6
+SUBDIR += qscintilla2
 SUBDIR += qt5
 SUBDIR += qt5-assistant
 SUBDIR += qt5-buildtools
