--- a/devel/Makefile
+++ b/devel/Makefile
@@ -380,6 +380,7 @@ SUBDIR += libvirt
 SUBDIR += libvirt-glib
 SUBDIR += libvolume_id
 SUBDIR += libvterm
+SUBDIR += libxsd
 SUBDIR += libzookeeper
 SUBDIR += libzvbi
 SUBDIR += linux-c7-dbus-glib
