add kde worksapce

--- a/x11-wm/Makefile
+++ b/x11-wm/Makefile
@@ -22,6 +22,8 @@ SUBDIR += muffin
 SUBDIR += mutter
 SUBDIR += obconf
 SUBDIR += openbox
+SUBDIR += plasma6-kdecoration
+SUBDIR += plasma6-kwin
 SUBDIR += ratpoison
 SUBDIR += twm
 SUBDIR += windowmaker
