--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -7,6 +7,12 @@ SUBDIR += alloy
 SUBDIR += amazon-ssm-agent
 SUBDIR += ansible
 SUBDIR += apachetop
+SUBDIR += atf-fvp
+SUBDIR += atf-master
+SUBDIR += atf-rk3328
+SUBDIR += atf-rk3399
+SUBDIR += atf-sun50i_a64
+SUBDIR += atf-sun50i_h6
 SUBDIR += b43-fwcutter
 SUBDIR += bacula9-client
 SUBDIR += bacula9-docs
