filesystems/ufs_copy: dir

--- a/filesystems/ufs_copy/Makefile
+++ b/filesystems/ufs_copy/Makefile
@@ -21,7 +21,7 @@ OPTIONS_DEFINE=	DOCS
 PLIST_FILES=	sbin/ufs_copy
 
 post-install-DOCS-on:
-	@${MKDIR} ${STAGEDIR}${DOCSDIR}
-	${INSTALL_DATA}	${WRKSRC}/${PORTDOCS} ${STAGEDIR}${DOCSDIR}
+	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
+	${INSTALL_DATA}	${WRKSRC}/${PORTDOCS} ${FAKE_DESTDIR}${DOCSDIR}
 
 .include <bsd.port.mk>
