--- a/databases/hiredis/Makefile
+++ b/databases/hiredis/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	hiredis
-PORTVERSION=	1.0.2
-DISTVERSIONPREFIX=v
+DISTVERSIONPREFIX=	v
+DISTVERSION=	1.2.0-15
 CATEGORIES=	databases
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -8,29 +8,20 @@ COMMENT=	Minimalistic C client library for the Redis database
 WWW=		https://github.com/redis/hiredis
 
 LICENSE=	bsd3
-
-FAKE_OPTS=	trueprefix
+LICENSE_FILE=	${WRKSRC}/COPYING
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	redis
+GH_TAGNAME=	7ab6b82
 
-USES=		cpe gmake
+USES=		cpe cmake pathfix ssl
 USE_LDCONFIG=	yes
 
 CPE_VENDOR=	redislabs
 
-OPTIONS_DEFINE=		OPENSSL
-OPTIONS_DEFAULT=	OPENSSL
-OPENSSL_MAKE_ARGS=	USE_SSL=1
+CMAKE_OFF=    ENABLE_NUGET
+CMAKE_ON=     DISABLE_TESTS ENABLE_SSL
 
 NO_TEST=	yes
-
-post-patch:
-	@${REINPLACE_CMD} \
-		-e 's|\$$(INSTALL_LIBRARY_PATH)/\$$(PKGCONF_PATH)|\$$(DESTDIR)\$$(PREFIX)/libdata/\$$(PKGCONF_PATH)|' \
-		${WRKSRC}/Makefile
-
-post-build:
-	@${STRIP_CMD} ${WRKSRC}/libhiredis.so
 
 .include <bsd.port.mk>
