--- a/devel/apache-log4j2/Makefile
+++ b/devel/apache-log4j2/Makefile
@@ -9,7 +9,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Fast and flexible logging library for Java
 WWW=		https://logging.apache.org/log4j/2.x/
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
 USES=		cpe java zip
