--- a/devel/p5-Capture-Tiny/Makefile
+++ b/devel/p5-Capture-Tiny/Makefile
@@ -9,7 +9,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Capture STDOUT and STDERR from Perl, XS, or external programs
 WWW=		https://metacpan.org/release/Capture-Tiny
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 TEST_DEPENDS=	p5-Inline>=0.50:devel/p5-Inline
