--- a/devel/p5-Test-FailWarnings/Makefile
+++ b/devel/p5-Test-FailWarnings/Makefile
@@ -7,7 +7,7 @@ PKGNAMEPREFIX=	p5-
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Add test failures if warnings are caught
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 
 BUILD_DEPENDS=	${RUN_DEPENDS}
 RUN_DEPENDS=	p5-Capture-Tiny>=0.21:devel/p5-Capture-Tiny
