--- a/devel/py-doctest-ignore-unicode/Makefile
+++ b/devel/py-doctest-ignore-unicode/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Add flag to ignore unicode literal prefixes in doctests
 WWW=		https://pypi.python.org/pypi/doctest-ignore-unicode
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}nose>=1.3.7:devel/py-nose@${PY_FLAVOR}
 
