--- a/devel/py-freezegun/Makefile
+++ b/devel/py-freezegun/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Let your Python tests travel through time
 WWW=		https://github.com/spulec/freezegun
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PY_SETUPTOOLS} \
