--- a/devel/py-googleapis-common-protos/Makefile
+++ b/devel/py-googleapis-common-protos/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Common protobufs used in Google APIs
 WWW=		https://github.com/googleapis/python-api-common-protos
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}protobuf>=4.21.6,1<5.0.0,1:devel/py-protobuf@${PY_FLAVOR}
 
