--- a/devel/py-grpcio-gcp/Makefile
+++ b/devel/py-grpcio-gcp/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	gRPC extensions for Google Cloud Platform
 WWW=		https://github.com/GoogleCloudPlatform/grpc-gcp-python
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}grpcio>=1.12.0:devel/py-grpcio@${PY_FLAVOR}
