--- a/devel/py-jsonpath-ng/Makefile
+++ b/devel/py-jsonpath-ng/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	JSONPath implementation based on jsonpath-rw and jsonpath-rw-ext
 WWW=		https://github.com/h2non/jsonpath-ng
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}decorator>0:devel/py-decorator@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}ply>0:devel/py-ply@${PY_FLAVOR} \
