--- a/devel/py-parsedatetime/Makefile
+++ b/devel/py-parsedatetime/Makefile
@@ -7,7 +7,7 @@ PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Python module for parsing 'human readable' date/time expressions
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 
 USES=	python
 USE_PYTHON=	distutils autoplist
