--- a/devel/py-trove-classifiers/Makefile
+++ b/devel/py-trove-classifiers/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Canonical source for classifiers on PyPI
 WWW=		https://github.com/pypa/trove-classifiers
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}calver>=0:devel/py-calver@${PY_FLAVOR} \
