--- a/devel/py-types-psutil/Makefile
+++ b/devel/py-types-psutil/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Typing stubs for psutil
 WWW=		https://github.com/python/typeshed/tree/main/stubs/psutil
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 
 USES=		python
 USE_PYTHON=	autoplist concurrent distutils
