--- a/devel/py-types-python-dateutil/Makefile
+++ b/devel/py-types-python-dateutil/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Typing stubs for python-dateutil
 WWW=		https://github.com/python/typeshed
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 
 USES=		python
 USE_PYTHON=	autoplist distutils
