--- a/devel/py-types-setuptools/Makefile
+++ b/devel/py-types-setuptools/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Typing stubs for setuptools
 WWW=		https://github.com/python/typeshed/tree/main/stubs/setuptools
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 
 USES=		python
 USE_PYTHON=	autoplist concurrent distutils
