--- a/devel/py-unicodedata2/Makefile
+++ b/devel/py-unicodedata2/Makefile
@@ -9,7 +9,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Unicodedata backport updated to the latest Unicode version
 WWW=		https://github.com/fonttools/unicodedata2
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR} \
