--- a/devel/rubygem-msgpack/Makefile
+++ b/devel/rubygem-msgpack/Makefile
@@ -8,7 +8,7 @@ COMMENT=	Gems for MessagePack
 WWW=		https://msgpack.org/ \
 		https://github.com/msgpack/msgpack-ruby
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		gem
