--- a/net-mgmt/prometheus-collectd-exporter/Makefile
+++ b/net-mgmt/prometheus-collectd-exporter/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Collectd exporter for Prometheus
 WWW=		https://github.com/prometheus/collectd_exporter
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		go gmake
