--- a/net-mgmt/prometheus1/Makefile
+++ b/net-mgmt/prometheus1/Makefile
@@ -9,7 +9,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Systems monitoring and alerting toolkit
 WWW=		https://prometheus.io/
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		cpe go
