--- a/net-mgmt/promscale/Makefile
+++ b/net-mgmt/promscale/Makefile
@@ -9,7 +9,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Timescale analytical platform for Prometheus metrics
 WWW=		https://www.timescale.com/promscale
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		go:modules
