--- a/security/py-docker-pycreds/Makefile
+++ b/security/py-docker-pycreds/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Python bindings for the docker credentials store API
 WWW=		https://github.com/shin-/dockerpy-creds/
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}six>=1.4:devel/py-six@${PY_FLAVOR}
