--- a/security/py-openssl/Makefile
+++ b/security/py-openssl/Makefile
@@ -10,7 +10,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Python interface to the OpenSSL library
 WWW=		https://github.com/pyca/pyopenssl
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		cpe python
