--- a/devel/py-jsonschema-path/Makefile
+++ b/devel/py-jsonschema-path/Makefile
@@ -9,7 +9,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	JSONSchema Spec with object-oriented paths
 WWW=		https://github.com/p1c2u/jsonschema-path
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}poetry-core>=1.0.0:devel/py-poetry-core@${PY_FLAVOR}
