--- a/devel/py-openapi-spec-validator/Makefile
+++ b/devel/py-openapi-spec-validator/Makefile
@@ -9,7 +9,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Validator for OpenAPI 2.0 and 3.0.0 specification
 WWW=		https://github.com/python-openapi/openapi-spec-validator
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}poetry-core>=1.0.0:devel/py-poetry-core@${PY_FLAVOR}
