--- a/devel/rubygem-thread_safe/Makefile
+++ b/devel/rubygem-thread_safe/Makefile
@@ -7,7 +7,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Thread-safe collections and utilities for Ruby
 WWW=		https://github.com/ruby-concurrency/thread_safe
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 NO_ARCH=	yes
