--- a/graphics/linux-rl9-shaderc/Makefile
+++ b/graphics/linux-rl9-shaderc/Makefile
@@ -7,7 +7,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	GLSL/HLSL to SPIR-V shader compiler (Rocky Linux ${LINUX_DIST_VER})
 WWW=		https://github.com/google/shaderc
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 
 USES=		cpe linux:rl9
 USE_LDCONFIG=	yes
