--- a/net-im/openfire/Makefile
+++ b/net-im/openfire/Makefile
@@ -10,7 +10,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Enterprise instant messaging server
 WWW=		https://www.igniterealtime.org/projects/openfire/index.jsp
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
 BUILD_DEPENDS=	mvn:java/maven
