--- a/print/cups/Makefile
+++ b/print/cups/Makefile
@@ -7,7 +7,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Common UNIX Printing System
 WWW=		https://github.com/OpenPrinting/cups
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		compiler:c++11-lang cpe gmake iconv localbase pkgconfig
