--- a/security/py-cryptography-vectors/Makefile
+++ b/security/py-cryptography-vectors/Makefile
@@ -10,7 +10,7 @@ COMMENT=	Test vectors for the cryptography package
 WWW=		https://cryptography.io/en/latest/development/test-vectors/ \
 		https://github.com/pyca/cryptography/tree/main/vectors
 
-LICENSE=	apache2 bsd3
+LICENSE=	Apache-2.0 bsd3
 LICENSE_COMB=	dual
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}flit-core>=3.2<4:devel/py-flit-core@${PY_FLAVOR}
