--- a/security/trivy/Makefile
+++ b/security/trivy/Makefile
@@ -7,7 +7,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Security scanner written in go
 WWW=		https://github.com/aquasecurity/trivy
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		go:modules,1.22
