--- a/security/zaproxy/Makefile
+++ b/security/zaproxy/Makefile
@@ -7,7 +7,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	The zed attack proxy
 WWW=		https://www.zaproxy.org/
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 
 BUILD_DEPENDS=	gradle:devel/gradle
 
