devel/py-jeepney: dep

--- a/devel/py-jeepney/Makefile
+++ b/devel/py-jeepney/Makefile
@@ -11,7 +11,7 @@ WWW=		https://gitlab.com/takluyver/jeepney
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}flit-core>=3.11<4:devel/py-flit-core@${PY_FLAVOR}
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}flit-core>=3.11:devel/py-flit-core@${PY_FLAVOR}
 
 USES=		python
 USE_PYTHON=	autoplist concurrent pep517
