--- a/audio/taglib/Makefile
+++ b/audio/taglib/Makefile
@@ -1,43 +1,32 @@
 PORTNAME=	taglib
-DISTVERSION=	1.12
+DISTVERSION=	2.0.2
 CATEGORIES=	audio
 MASTER_SITES=	https://github.com/${PORTNAME}/${PORTNAME}/releases/download/v${DISTVERSION}/ \
 		https://taglib.org/releases/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Library for manipulating ID3 tags and Ogg comments
+WWW=		https://taglib.org/
 
-LICENSE=	lgpl2.1 MPL11
-LICENSE_COMB=	dual
-LICENSE_FILE_MPL=	${WRKSRC}/COPYING.MPL
+LICENSE=		lgpl2.1 MPL11
+LICENSE_COMB=		dual
+LICENSE_FILE_lgpl2.1=	${WRKSRC}/COPYING.LGPL
+LICENSE_FILE_MPL11=	${WRKSRC}/COPYING.MPL
 
-USES=		cmake compiler:c++11-lang cpe pathfix
+BUILD_DEPENDS=	utf8cpp>0:devel/utf8cpp
+TEST_DEPENDS=	cppunit-config:devel/cppunit
+
+USES=		cmake:testing compiler:c++17-lang cpe pathfix
 USE_LDCONFIG=	yes
 
 CMAKE_ARGS=	-DCMAKE_CXX_VISIBILITY_PRESET=hidden
-CMAKE_ON=	VISIBILITY_HIDDEN \
-		WITH_ASF \
-		WITH_MP4
+CMAKE_ON=	VISIBILITY_HIDDEN
 
-OPTIONS_DEFINE=	RCC STATIC
+CMAKE_TESTING_TARGET=	check
+
+OPTIONS_DEFINE=	STATIC
 OPTIONS_SUB=	yes
 
-# The official patches for this can be obtained from:
-#   http://darksoft.org/files/rusxmms/patches/
-#
-RCC_DESC=		Build with RusXMMS librcc patches (experimental)
-RCC_LIB_DEPENDS=	librcc.so:devel/librcc
-RCC_USES=		localbase:ldflags
-RCC_EXTRA_PATCHES=	${FILESDIR}/extrapatch-rcc
-
 STATIC_CMAKE_BOOL_OFF=	BUILD_SHARED_LIBS
-
-NO_TEST=	yes
-
-post-patch-RCC-on:
-	@${REINPLACE_CMD} -e 's|-ltag|-ltag -lrcc|g' \
-		${WRKSRC}/taglib.pc.cmake ${WRKSRC}/taglib-config.cmake
-	@${REINPLACE_CMD} -e 's|-ltag_c|-ltag_c -lrcc|g' \
-		${WRKSRC}/bindings/c/taglib_c.pc.cmake
 
 .include <bsd.port.mk>
